--- a/Momento/View/Base.lproj/Main.storyboard
+++ b/Momento/View/Base.lproj/Main.storyboard
@@ -124,7 +124,7 @@
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                 <size key="titleShadowOffset" width="5" height="0.0"/>
                                 <state key="normal" title="Log In">
-                                    <color key="titleColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -235,7 +235,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                 <state key="normal" title="Sign Up">
-                                    <color key="titleColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <color key="titleColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -416,7 +416,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                 <state key="normal" title="Continue">
-                                    <color key="titleColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="continueBtnSegue:" destination="K2e-3V-LxO" eventType="touchUpInside" id="Bbj-3S-T6d"/>
@@ -455,11 +455,63 @@
                         <outlet property="lastNameInput" destination="NYu-rR-3KJ" id="OsM-g8-yPh"/>
                         <outlet property="nameInput" destination="A0A-4u-rQL" id="QNj-8N-vMS"/>
                         <outlet property="phoneInput" destination="Q0f-zr-rID" id="7sn-Yu-A4A"/>
+                        <segue destination="eJB-hj-gUe" kind="show" identifier="onboard2Segue" id="JP0-ik-EMg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EUd-7t-2CN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2221.739130434783" y="1455.8035714285713"/>
+        </scene>
+        <!--Onboard2 View Controller-->
+        <scene sceneID="3Zf-Xr-Kpb">
+            <objects>
+                <viewController id="eJB-hj-gUe" customClass="Onboard2ViewController" customModule="Momento" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0Rp-qX-rmL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4i3-E7-rtJ">
+                                <rect key="frame" x="75" y="738" width="264" height="50"/>
+                                <color key="backgroundColor" red="0.98039215690000003" green="0.63529411759999999" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="uZs-tJ-ibJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                <state key="normal" title="Sign Up!">
+                                    <color key="titleColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="signupBtn:" destination="eJB-hj-gUe" eventType="touchUpInside" id="Fv1-1J-33h"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What kind of designer are you?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8vz-ye-hCT">
+                                <rect key="frame" x="20" y="93" width="374" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="oOx-V4-v9L"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
+                                <color key="textColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Lvs-KZ-kMH" firstAttribute="bottom" secondItem="4i3-E7-rtJ" secondAttribute="bottom" constant="25" id="0gb-3r-ZNj"/>
+                            <constraint firstItem="Lvs-KZ-kMH" firstAttribute="trailing" secondItem="4i3-E7-rtJ" secondAttribute="trailing" constant="75" id="Dih-Qs-EdI"/>
+                            <constraint firstItem="8vz-ye-hCT" firstAttribute="top" secondItem="Lvs-KZ-kMH" secondAttribute="top" constant="5" id="YBc-ee-ygZ"/>
+                            <constraint firstItem="4i3-E7-rtJ" firstAttribute="leading" secondItem="Lvs-KZ-kMH" secondAttribute="leading" constant="75" id="fth-ES-Rau"/>
+                            <constraint firstItem="8vz-ye-hCT" firstAttribute="trailing" secondItem="0Rp-qX-rmL" secondAttribute="trailingMargin" id="ndO-ey-Hh4"/>
+                            <constraint firstItem="8vz-ye-hCT" firstAttribute="leading" secondItem="0Rp-qX-rmL" secondAttribute="leadingMargin" id="u6a-SZ-g5s"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Lvs-KZ-kMH"/>
+                    </view>
+                    <connections>
+                        <outlet property="signupBtnSetup" destination="4i3-E7-rtJ" id="vne-h0-JY7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="prl-Ok-dBb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2218.840579710145" y="2139.5089285714284"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
